# homeassistant-kef

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: hassfest.yml  validate.yml
custom_components/kef/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  media_player.py  models.py  number.py  select.py  sensor.py  services.yaml  switch.py  text.py  update.py
custom_components/kef/kef_client/: __init__.py  client.py  const.py  exceptions.py  models.py
custom_components/kef/translations/: en.json
docs/: feature-checklist.md  kef-lsx2-investigation.md  python-library.md
examples/: python_client.py
kef_client/: __init__.py  _loader.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_python_package.py
tests/components/kef/: test_api.py  test_config_flow.py  test_coordinator.py  test_media_player.py  test_services.py  test_update.py
